# mini-uploader-immich

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  crypto.py  db.py  immich.py  main.py  scanner.py
backend/app/routers/: admin.py  upload.py
backend/tests/: conftest.py  test_config_and_token.py  test_crypto_and_secret.py  test_immich_client.py  test_scanner.py  test_setup_and_auth.py  test_upload.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/pages/: AdminLogin.tsx  AdminPanel.tsx  AdminSetup.tsx  Upload.tsx
